Fixed blog controls on mobile

--- a/src/components/Blog/BlogHome/index.module.scss
+++ b/src/components/Blog/BlogHome/index.module.scss
@@ -1,9 +1,9 @@
 @import "../../../index.scss";
 
-.pageNumbers {
-    max-width: 80%;
-}
-
-.postsPerPage {
-    float: right;
+.controls {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-bottom: 1.5rem;
 }
